...
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                Text('Informações Gerais', style: textTheme.titleLarge),
                if (profile.athleteDetails != null)
                  IconButton(
                    // ✅ CHAVE ADICIONADA PARA O TESTE
                    key: const ValueKey('edit_profile_button'),
                    icon: const Icon(Icons.edit_outlined),
                    tooltip: 'Editar Meu Perfil de Atleta',
                    onPressed: () {
                      context.pushNamed(
                        AppRoutes.editAthlete,
                        pathParameters: {
...
